Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-17 Kimmo
 PATCH: [ 1540090 ] Change horizontal scroll synch from relative to absolute
  Src/Common: SplitterWndEx.cpp

2006-08-17 Gal
 PATCH: [ 1541158 ] New high-color toolbar icons
  Src: BCMenu.cpp MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2006-08-16 Takashi
 PATCH: [ 1539568 ] draw icon at modified line (it was changed to line revision marks)
  Src: GhostTextBuffer.cpp GhostTextBuffer.h MergeDoc.cpp MergeDoc.h
  Src/editlib: ccrystaltextbuffer.cpp ccrystaltextbuffer.h ccrystaltextview.cpp

2006-08-16 Kimmo
 PATCH: [ 1456356 ] Scrollbars sometimes not initially active
  Src: Merge.cpp

2006-08-15 Kimmo
 PATCH: [ 1540129 ] Fix indentation of diffutils io.c
  Src/diffutils/src: IO.C
 PATCH: [ 1540054 ] Remove Copy All -items from folder compare menu
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1535558 ] Add GUI for shell extension folder include
  Src: Merge.rc PropRegistry.cpp PropRegistry.h resource.h
  Src/Languages/*: Merge*.rc

2006-08-13 Gal
 BUG: [ 1538340 ] Undo enabled for folder compare.
  Src: DirView.h DirView.cpp

2006-08-13 Takashi
 Japanese translation - update
  Src/Languages/Japanese: MergeJapanese.rc

2006-08-13 Tim
 PATCH: [ 1539204 ] Remove '#' from '#differences' column
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-11 Kimmo
 PATCH: [ 1538264 ] Split DiffFileData class to own files
  Src: DiffWrapper.cpp DiffWrapper.h DirScan.cpp DirViewColItems.cpp Merge.dsp
  Src new files: DiffFileData.cpp DiffFileData.h
 PATCH: [ 1537261 ] Swedish 2.5.5.6+ translation update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-08-10 Kimmo
 Fix doxygen comment for ImportOptions()
  Src/Common: OptionsMgr.cpp

2006-08-10 Gal
 PATCH: Code cleanup. Removed commented out code.
  Src/Common: SuperComboBox.cpp
