@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-19 Kimmo
+ PATCH: [ 1542201 ] Change default user filter folder to WinMerge/Filters
+  Src: MainFrm.cpp
+
 2006-08-17 Kimmo
  PATCH: [ 1540090 ] Change horizontal scroll synch from relative to absolute
   Src/Common: SplitterWndEx.cpp
